--- a/package.json
+++ b/package.json
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "lucide-react": "^0.233.0",
     "negotiator": "^0.6.3",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^1.13.0",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "eslint": "^8.41.0",
-    "eslint-config-next": "^13.4.4",
     "@formatjs/intl-localematcher": "^0.2.32",
     "@types/negotiator": "^0.6.1",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4"
+    "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4",
+    "postcss": "^8.4.24"
   }
 }
