--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cedne",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^4.15.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-separator": "^1.0.3",
@@ -27,7 +28,8 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@formatjs/intl-localematcher": "^0.2.32",
@@ -40,6 +42,7 @@
     "clsx": "^1.2.1",
     "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.4",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "prisma": "^4.15.0"
   }
 }
