--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "^5.0.4",
