--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@react-hookz/web": "^23.0.1",
     "country-flag-icons": "^1.5.7",
-    "lucide-react": "^0.233.0",
+    "lucide-react": "^0.244.0",
     "negotiator": "^0.6.3",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.0",
@@ -34,7 +41,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@formatjs/intl-localematcher": "^0.2.32",
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@types/negotiator": "^0.6.1",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
