--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "^5.0.4",
+    "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
