--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,18 +18,11 @@ jobs:
         id: package
         uses: codex-team/action-nodejs-package-info@v1.1
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Docker Build & Push Action
+        uses: mr-smithers-excellent/docker-build-push@v6.2
         with:
+          image: ${{ secrets.DOCKER_USERNAME }}/${{ steps.package.outputs.name }}
+          tags: ${{ steps.package.outputs.version }}, latest
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Docker Build & Push Action
-        uses: docker/build-push-action@v4
-        with:
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/${{ steps.package.outputs.name }}:${{ steps.package.outputs.version }}
-            ${{ secrets.DOCKER_USERNAME }}/${{ steps.package.outputs.name }}:latest
-          push: true
-          build-args: |
-            DATABASE_URL=${{ secrets.DATABASE_URL }}
